--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="image.css" />
     <title>prueba</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hola popla</h1>
+  </body>
 </html>
