--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Hola popla</h1>
     <h2>adios</h2>
-    <li>
-      <p>hola</p>
-      <p>como</p>
-      <p>estas?</p>
-      <p>元気か</p>
-    </li>
+    <ul>
+      <li>hola</li>
+      <li>como</li>
+      <li>estas?</li>
+      <li>元気か</li>
+    </ul>
   </body>
 </html>
